--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu-32s]
+[env:esp32_server]
 platform = espressif32
 board = esp32-c3-devkitm-1
 framework = arduino
-monitor_speed = 921600 # Set the monitor speed to 921600 baud
+monitor_speed = 921600
+upload_port = /dev/cu.usbserial-110
+
+[env:esp32_client]
+platform = espressif32
+board = esp32-c3-devkitm-1
+framework = arduino
+monitor_speed = 921600
+upload_port = /dev/cu.usbserial-120
